# minicc

./: .env.example  .gitignore  CHECKPOINT.md  CONTEXT_MANAGEMENT.md  LICENSE  MEMORY_DESIGN.md  PAIN.md  PERMISSIONS.md  README.md  SESSIONS.md  STREAMING.md  SUBAGENTS.md  TOOL_SCHEMAS.md  opus4_7_description.txt  pyproject.toml
evals/: INFRA_NOTES.md  tasks.md
minicc/: agent.py  checkpoints.py  cli.py  config.py  llm.py  memory.py  permissions.py  sessions.py  ux.py
minicc/prompts/: system.py
minicc/tools/: __init__.py  bash.py  edit_file.py  glob.py  grep.py  memory.py  read_file.py  task.py  todo_write.py  write_file.py
tests/: test_checkpoints.py  test_config.py  test_context_mgmt.py  test_memory.py  test_sessions.py  test_subagent.py  test_todo_write.py  test_tools.py
